--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "jQuery": "~2.1.0",
     "ionicons": "~1.4.1",
-    "normalize.css": "~3.0.0"
+    "normalize.css": "~3.0.0",
+    "retina.js": "~1.2.0"
   }
 }
