--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "jQuery": "~2.1.0",
     "ionicons": "~1.4.1",
     "normalize.css": "~3.0.0",
-    "retina.js": "~1.2.0"
+    "retina.js": "~1.2.0",
+    "basicModal": "~1.0.1"
   }
 }
