--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "~0.11.1",
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-sass": "~0.8.0",
-    "load-grunt-tasks": "~0.6.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "load-grunt-tasks": "~0.6.0"
   }
 }
