miniLychee replaced by Frontend; Avatar image on the top left;

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "miniLychee",
-  "version": "0.0.1",
+  "name": "Flyerpic Frontend",
+  "version": "0.0.2",
   "description": "",
   "authors": [
     "Tobias Reich <tobias.reich.ich@gmail.com>"
